signin: functionality & errors & navigation

--- a/src/components/form/Form/Form.scss
+++ b/src/components/form/Form/Form.scss
@@ -1,5 +1,6 @@
 form {
   .form-action-buttons {
+    margin-top: 1rem;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
