--- a/src/components/form/Button/Button.scss
+++ b/src/components/form/Button/Button.scss
@@ -1,11 +1,13 @@
 .button {
   padding: 0.75rem 1rem;
-  border-radius: 15px;
+  border-radius: 30px;
   border: solid 1px;
   border-color: #ffffff7a;
   cursor: pointer;
 
   box-shadow: 1px 1px 1px #8b8b8b7a;
+
+  font-size: 17px;
 
   &:hover,
   &:focus,
@@ -14,7 +16,7 @@
   }
 
   &.primary {
-    background-color: #f1b814;
+    background-color: #bd1e51;
     color: white;
     font-weight: bold;
   }
