--- a/src/app/Home/Home.scss
+++ b/src/app/Home/Home.scss
@@ -8,22 +8,26 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    mix-blend-mode: screen;
 
     background-color: rgb(0 0 0 / 0%);
     backdrop-filter: blur(5px);
     z-index: 10;
 
-    #logo {
+    #logo-link {
       #ch-logo {
         width: 160px;
       }
     }
+
     #links {
       display: flex;
       flex-direction: row;
 
       .link {
         margin-right: 3rem;
+        color: #f1b814;
+        font-weight: 500;
 
         &::after {
           content: "";
@@ -50,9 +54,8 @@
   }
 
   #landing-body {
-    padding-top: 5rem;
-
     #home {
+      padding-top: 5rem;
       min-height: 100vh;
       display: flex;
       flex-direction: row;
@@ -101,8 +104,13 @@
 
       #right {
         width: 40%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-start;
 
         #ch-screenshot {
+          width: 95%;
         }
       }
     }
