--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -106,6 +106,10 @@ a {
   text-decoration: none;
 }
 
+button {
+  font-family: "Lora", serif !important;
+}
+
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
