--- a/src/components/navigation/NavigationBar/NavigationBar.scss
+++ b/src/components/navigation/NavigationBar/NavigationBar.scss
@@ -19,14 +19,14 @@
   }
 
   #tabs-section {
-    padding: 0.3rem 1rem;
+    padding: 0.5rem 1rem;
     flex: 1;
 
     display: flex;
     flex-direction: row;
 
     .tab {
-      padding: 0.3rem 1rem;
+      padding: 0.5rem 1rem;
 
       display: flex;
       justify-content: center;
@@ -41,23 +41,93 @@
   }
 
   #user-section {
-    padding: 0.3rem 1rem;
+    padding: 0.5rem 1rem;
 
     display: flex;
     flex-direction: row;
+    align-items: center;
+
+    cursor: pointer;
+    background-color: transparent;
+    border: none;
+
+    position: relative;
+
+    &:focus,
+    &:active {
+      outline: none;
+    }
 
     #user-info {
       justify-content: center;
       display: flex;
       flex-direction: column;
+      padding-right: 0.75rem;
 
-      p {
+      #user-name {
+        font-weight: 700;
+        text-align: right;
+        font-size: 14px;
+        line-height: 1.2;
+      }
+
+      #user-company {
+        text-align: right;
+        font-size: 14px;
+        line-height: 1.2;
       }
     }
 
-    #user-img {
-      #user-logo {
-        width: 50px;
+    #user-avatar {
+      font-weight: 900;
+      font-size: 25px;
+      width: 40px;
+      height: 40px;
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      align-items: center;
+
+      color: white;
+      background-color: #f1b814;
+      border-radius: 50%;
+    }
+  }
+}
+
+.menu {
+  position: absolute;
+  background-color: white;
+  box-shadow: 1px 1px 7px 0px #808080a3;
+  z-index: 10;
+
+  right: 5;
+  width: 70%;
+
+  .menu-list {
+    list-style: none;
+    padding: 0.25rem 0;
+
+    .menu-item {
+      .menu-button {
+        width: 100%;
+        border: none;
+        background-color: transparent;
+        cursor: pointer;
+        padding: 0.5rem;
+
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+
+        &:hover {
+          background-color: #dfdfdf;
+        }
+
+        .logout-icon {
+          margin-left: 5px;
+        }
       }
     }
   }
