--- a/src/components/navigation/NavigationBar/style.scss
+++ b/src/components/navigation/NavigationBar/style.scss
@@ -19,14 +19,14 @@
   }
 
   #tabs-section {
-    padding: 0.5rem 1rem;
+    padding: 0rem 1rem;
     flex: 1;
 
     display: flex;
     flex-direction: row;
 
     .tab {
-      padding: 0.5rem 1rem;
+      padding: 1rem 1rem;
 
       display: flex;
       justify-content: center;
@@ -34,8 +34,12 @@
 
       .tab-text {
       }
+    }
+    .tab-active {
+      color: #bd1e51;
+      border-bottom: solid 3px #bd1e51;
 
-      .tab-active {
+      .tab-text {
       }
     }
   }
