--- a/src/app/insights/style.scss
+++ b/src/app/insights/style.scss
@@ -18,6 +18,30 @@ main {
       .chart-right {
         width: 50%;
       }
+
+      @media only screen and (max-width: 1000px) {
+        flex-direction: column;
+
+        .chart-left,
+        .chart-right {
+          width: 100%;
+        }
+      }
+    }
+
+    @media only screen and (max-width: 1000px) {
+      margin-top: 10rem;
+    }
+
+    @media only screen and (max-width: 600px) {
+      margin-top: 15rem;
+    }
+    @media only screen and (max-width: 500px) {
+      margin-top: 20rem;
+    }
+
+    @media only screen and (max-width: 400px) {
+      margin-top: 23rem;
     }
   }
 }
