--- a/src/components/layout/Card/style.scss
+++ b/src/components/layout/Card/style.scss
@@ -6,6 +6,10 @@
   padding: 1.2rem;
 
   box-shadow: 0px 3px 10px 0px rgb(184 184 184 / 40%);
+
+  @media only screen and (max-width: 1000px) {
+    overflow-x: scroll;
+  }
 }
 
 #fullHeight {
