--- a/src/components/table/style.scss
+++ b/src/components/table/style.scss
@@ -53,6 +53,9 @@
         th {
           padding: 0.8rem 0;
 
+          .sortable {
+            cursor: row-resize;
+          }
           &:nth-child(1) {
             border-radius: 8px 0 0 8px;
           }
