--- a/src/components/layout/Modal/style.scss
+++ b/src/components/layout/Modal/style.scss
@@ -20,6 +20,14 @@
     transform: translate(-50%, -50%);
     border-radius: 15px;
 
+    @media only screen and (max-width: 1000px) {
+      width: 70%;
+    }
+
+    @media only screen and (max-width: 500px) {
+      width: 100%;
+    }
+
     #close-button {
       width: 30px;
       height: 30px;
