row actions menu style update

--- a/src/components/table/style.scss
+++ b/src/components/table/style.scss
@@ -170,6 +170,7 @@
     position: absolute;
     background-color: white;
     z-index: 10;
+    width: 150%;
 
     .menu-list {
       list-style: none;
